Add PCF integration, use Spring Cloud Services